        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=22397
        Worker threads are not destroyed if running a JS loop

        Since the event loop is not ever entered again in this case, the fix necessarily involves
        some shared data hackery.

        * dom/WorkerThread.cpp: (WebCore::WorkerThread::stop):
        * dom/WorkerThread.h:
        Added a stop() method, which asks the thread to exit as soon as possible. In the future, it
        may need to abort other kinds of synchronous processing, such as importScripts or XHR.

        * bindings/js/WorkerScriptController.cpp:
        (WebCore::WorkerScriptController::WorkerScriptController):
        (WebCore::WorkerScriptController::evaluate):
        (WebCore::WorkerScriptController::forbidExecution):
        * bindings/js/WorkerScriptController.h:
        Added a forbidExecution() method, which interrupts currently running JS, and makes any
        future calls to evaluate() return immediately.

        * dom/WorkerMessagingProxy.cpp: (WebCore::WorkerMessagingProxy::workerObjectDestroyed):
        Call WorkerThread::stop().



Canonical link: https://commits.webkit.org/30898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38689 268f45cc-cd09-0410-ab3c-d52691b4dbfc