WebCore/dom/WorkerThread.h
@@ -36,6 +36,7 @@
 namespace WebCore {
 
     class KURL;
+    class WorkerContext;
     class WorkerMessagingProxy;
     class WorkerTask;
 
@@ -45,6 +46,7 @@ namespace WebCore {
         ~WorkerThread();
 
         bool start();
+        void stop();
 
         ThreadIdentifier threadID() const { return m_threadID; }
         MessageQueue<RefPtr<WorkerTask> >& messageQueue() { return m_messageQueue; }
@@ -62,6 +64,8 @@ namespace WebCore {
         String m_scriptURL;
         String m_sourceCode;
         WorkerMessagingProxy* m_messagingProxy;
+
+        RefPtr<WorkerContext> m_workerContext;
 
         MessageQueue<RefPtr<WorkerTask> > m_messageQueue;
     };
